# omr

./: .appveyor.yml  .gitattributes.zos  .gitignore  .project  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  GNUmakefile  README.md  azure-pipelines.yml  configure  configure.ac  omr.rc.in  omrcfg.CMakeTemplate.h  omrversionstrings.CMakeTemplate.h  run_configure.mk
.ccls-cache/@@home@rahatly@Desktop@projects@omr/: @home@rahatly@Desktop@ccls@clang+llvm-8.0.0-x86_64-linux-gnu-ubuntu-18.04@lib@clang@8.0.0@include@__stddef_max_align_t.h.blob  @usr@include@features.h.blob  (+28 more)
cmake/: config.cmake  platform.cmake
ddr/: CMakeLists.txt
ddr/test/: CMakeLists.txt
doc/: BuildingWithCMake.md  CodingStandard.md  GenAIUsageGuidelines.md  GuideForCommitters.md  SupportedC++Features.md  ValgrindMemcheckAPI.md
example/: CMakeLists.txt  main.cpp  makefile
fvtest/: CMakeLists.txt  omrtest.mk
gc/: CMakeLists.txt  omrmm.hdf  omrmmprivate.hdf
glue/: CollectorLanguageInterfaceImpl.hpp  ContractslotScanner.hpp  FrequentObjectsStats.cpp  ObjectIterator.hpp  ObjectModel.hpp
include_core/: AtomicSupport.hpp  edcwccwi.h  leconditionhandler.h  omr.h  omragent.h  omragent_internal.h  omrceetbck.h  omrcfg.h.in  omrcomp.h  omrgcconsts.h  omrmemcategories.h  omrmutex.h  omrport.h  omrporterror.h  omrportsock.h  omrprofiler.h  omrsig.h  omrthread.h  omrthread_generated.h  omrutil.h  omrutilbase.h  thread_api.h  thrtypes.h  ute_core.h  ute_dataformat.h  ute_module.h
nj/: CMakeLists.txt  README.md
omr/: CMakeLists.txt
omr_static_lib/: CMakeLists.txt
omrmakefiles/: confighelpers.m4  configure.mk.in  generate-exports.sh  jitinclude.mk  omr_defs.mk  omrconf.sh  rules.aix.mk  rules.freebsd.mk  rules.linux.mk  rules.mk  rules.osx.mk  rules.win.mk  rules.zos.mk  rules.ztpf.mk  winexe.manifest
omrsigcompat/: CMakeLists.txt  makefile  omrsig.cpp  omrsig_internal.hpp
omrtrace/: CMakeLists.txt  makefile  omrtrace_internal.h  omrtraceapi.cpp  omrtracecomponent.cpp  omrtraceformatter.cpp  omrtracelog.cpp  omrtracemain.cpp  omrtracemisc.cpp  omrtraceoptions.cpp  omrtracepublish.cpp  omrtracewrappers.cpp
perftest/: omrperftest.mk
port/: CMakeLists.txt  makefile  omrportpriv.h  port.exportlist  port_objects.mk
scripts/: build-on-travis.sh  commit-msg
sharedcache/: CMakeLists.txt  CacheCRCChecker.cpp  CacheCRCChecker.hpp  CacheHeaderMapping.hpp  CacheHeaderMappingImpl.hpp  CacheMemoryProtectionOptions.hpp  OMROSCache.hpp  OSCache.hpp  OSCacheConfig.hpp  OSCacheConfigOptions.cpp  OSCacheConfigOptions.hpp  OSCacheContiguousRegion.cpp  OSCacheContiguousRegion.hpp  OSCacheImpl.cpp  OSCacheImpl.hpp  OSCacheIterator.hpp  OSCacheLayout.cpp  OSCacheLayout.hpp  OSCacheMemoryProtector.hpp  OSCacheRegion.hpp  OSCacheRegionBumpFocus.hpp  OSCacheRegionFocus.hpp  OSCacheRegionInitializer.hpp  OSCacheRegionSerializer.hpp  OSCacheStats.hpp  OSCacheUtils.cpp  OSCacheUtils.hpp  OSMemoryMappedCache.cpp  OSMemoryMappedCache.hpp  OSMemoryMappedCacheAttachingContext.cpp  OSMemoryMappedCacheAttachingContext.hpp  OSMemoryMappedCacheConfig.cpp  OSMemoryMappedCacheConfig.hpp  OSMemoryMappedCacheCreatingContext.cpp  OSMemoryMappedCacheCreatingContext.hpp  OSMemoryMappedCacheHeader.cpp  OSMemoryMappedCacheHeader.hpp  OSMemoryMappedCacheHeaderMapping.hpp  OSMemoryMappedCacheInitializationContext.hpp  OSMemoryMappedCacheInitializer.hpp  (+30 more)
thread/: CMakeLists.txt  j9thr.tdf  makefile  omrthreadinspect.c  omrthreadinspect.h  thread_include.mk
tools/: CMakeLists.txt  ImportTools.cmake  configure  configure.ac  toolconfigure.mk.in
tools/compiler/OMRChecker/: Makefile  OMRChecker.cpp  OMRChecker.hpp  README.md  smartmake.sh  test.py
tools/compiler/OMRChecker/testing/: __init__.py  gen_data.py  tool.py  tooltester.py
tools/compiler/OMRChecker/testing/input/bad/: doubleExtension.cpp  functionCallUsingCStyleCast.cpp  functionCallUsingExplicitThis.cpp  functionCallUsingImplicitThis.cpp  functionCallUsingReinterpretCast.cpp  oneNonExtBetweenTwoExt.cpp  staticFunctionCallOnConcreteWithoutScopeResolution.cpp  twoExtExtendOneNonExt.cpp  unmarkedInheritsFromMarkedInDifferentProject.cpp
tools/compiler/OMRChecker/testing/input/good/: extExtendsNonExt.cpp  functionCallUsingScopeResolution.cpp  functionCallUsingSelf.cpp  functionCallUsingStaticCast.cpp  selflessCallsInMostDerived.cpp  simpleThreeLevelHierarchy.cpp  staticFunctionCallOnAbstractUsingScopeResolution.cpp  staticFunctionCallOnConcreteUsingScopeResolution.cpp  staticFunctionCallOnNonExtWithoutScopeResolution.cpp  staticNonMemberFunctionCallWithNamespace.cpp  staticNonMemberFunctionCallWithoutNamespace.cpp
tools/compiler/p/: ftops.pl
tools/compiler/scripts/: armasm2gas.sed  generateVersion.pl  guess-platform.sh  masm2gas.pl  s390m4check.pl
tools/ddrgen/src/blob_generation/java/: genSuperset.cpp  genSuperset.hpp
tools/ddrgen/src/cmdline_tool/: main.cpp
tools/ddrgen/src/intermediate_representation/: ClassUDT.cpp  EnumUDT.cpp  NamespaceUDT.cpp  Symbol_IR.hpp  UDT.cpp  UDT.hpp  UnionUDT.cpp
tools/ddrgen/src/scanners/dwarf/: AixSymbolTableParser.cpp  AixSymbolTableParser.hpp  DwarfScanner.cpp
tools/hookgen/: CMakeLists.txt  HookGen.cpp  HookGen.hpp  main.cpp  makefile
tools/tracegen/: ArgParser.cpp  ArgParser.hpp  CFileWriter.cpp  CFileWriter.hpp  CMakeLists.txt  DATFileWriter.cpp  DATFileWriter.hpp  EventTypes.hpp  FileReader.cpp  FileReader.hpp  FileUtils.cpp  FileUtils.hpp  Port.cpp  Port.hpp  StringUtils.cpp  StringUtils.hpp  TDFParser.cpp  TDFParser.hpp  TDFTypes.hpp  TraceGen.cpp  TraceGen.hpp  TraceHeaderWriter.cpp  TraceHeaderWriter.hpp  main.cpp  makefile
tools/tracemerge/: CMakeLists.txt  DATMerge.cpp  DATMerge.hpp  main.cpp  makefile
util/: CMakeLists.txt
util/a2e/: CMakeLists.txt  atoe.c  atoe_utils.c  makefile  sysTranslate.c
util/a2e/headers/: _Ccsid.h  atoe.h  ctype.h  dirent.h  dll.h  fcntl.h  grp.h  langinfo.h  locale.h  netdb.h  old-stdio.h  old-stdlib.h  prefixpath.h  pwd.h  spawn.h  stdio.h  stdlib.h  string.h  strings.h  time.h  unistd.h
util/a2e/headers/arpa/: inet.h
util/a2e/headers/sys/: ipc.h  stat.h  time.h  utsname.h
(+1374 files in other folders)
